--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
         <activity android:name=".MainActivity"/>
         <activity android:name=".LevelActivity"/>
         <activity android:name=".Menupage"/>
+        <activity android:name=".Moving"/>
+        <activity android:name=".Rising"/>
     </application>
 
 </manifest>
