--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".SplashActivity"
-            android:screenOrientation="portrait"
-        >
+        <activity android:name=".test.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,6 +29,24 @@
 
         <activity android:name=".Sample"
             android:screenOrientation="portrait"/>
+
+
+
+        <activity
+            android:name=".test.valueanimator.ValueAnimatorDemo" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="roman10.tutorial.propertyanimation.EXAMPLE"/>
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".test.valueanimator.ValueAnimatorDemo2"
+            android:label="valueanimator/ValueAnimatorDemo2" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="roman10.tutorial.propertyanimation.EXAMPLE"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
